tests/ui/pattern/overflowing-literals.stderr
error: literal out of range for `u8`
  --> $DIR/overflowing-literals.rs:14:9
   |
LL |         500 => {}
   |         ^^^
   |
   = note: the literal `500` does not fit into the type `u8` whose range is `0..=255`
   = note: `#[deny(overflowing_literals)]` on by default

error: aborting due to 1 previous error

